# SICK_SensorTechnology_code_challenge

./: CMakeLists.txt  README.md
code_challenge/: CMakeLists.txt  code_challenge.cpp  code_challenge.h  main.cpp
tests/: CMakeLists.txt  RobotTests.cc  hello_test.cc
